# ripenv

./: .gitignore  LICENSE  LOCAL_RUN.md  README.md
ripenv/: README.md
ripenv/cli/: README.md  pyproject.toml
ripenv/cli/ripenv/: __init__.py  crypto.py  keyfile.py  llm_agent.py  main.py  manifest.py  supabase_client.py  types.py
ripenv/cli/ripenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ripenv/cli/tests/: test_roundtrip.py
ripenv/migrations/: add_last_edited_and_rotation_settings.sql
ripenv/supabase/: setup_rotation_reminders.sql
ripenv/supabase/functions/send-rotation-reminders/: README.md  index.ts
ripenv/supabase/functions/test-email-reminders/: index.ts
ripenv/supabase/functions/test-rotation-reminders/: index.ts
ripenv/web/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ripenv/web/app/: layout.tsx  page.tsx
ripenv/web/app/api/auth/: route.ts
ripenv/web/app/dashboard/: page.tsx
ripenv/web/app/keys/: page.tsx
ripenv/web/app/projects/[id]/: page.tsx
ripenv/web/components/: AppChrome.tsx  AuthGate.tsx  Button.tsx  Card.tsx  CustomCursor.tsx  CyberGrid.tsx  DecryptedText.tsx  GridPattern.tsx  MatrixRain.tsx  NotificationBell.tsx  ParticleField.tsx  Table.tsx  TerminalCursor.tsx  Toast.tsx
ripenv/web/lib/: cn.ts  supabase.ts  useRotationNotifications.ts  z.ts
ripenv/web/lib/crypto/: argon2.ts  keys.ts
ripenv/web/lib/export/: recs.ts
ripenv/web/styles/: globals.css
ripenv/web/types/: argon2-browser.d.ts
